--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             <li class="cabecalho-lista-item">Estudante</li>
             <li class="cabecalho-lista-item">Escola</li>
         </ul>
-    </header>
+ </header>
+ <section class=”escola”> 
+    <h2 class=”escola-titulo”>Sobre a Escola</h2> 
+    <p class=”escola-texto-um”></p> 
+    <p class=”escola-texto-dois”></p> 
+   </section>
+   
 </body>
 </html>
