--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class=”escola-texto-um”>A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. </p> 
     <p class=”escola-texto-dois”>A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p> 
  </div>
- <img src="./img/Study abroad-amico (1).png" alt ="professora no quadro">
+ <img src="/img/Formula-bro.png" alt ="professora no quadro">
 </section>
 </body>
 </html>
